# compute_shader_tutorial

./: Cargo.toml  README.md  build.rs
.github/: FUNDING.yml
compute_shaders/: color.glsl  dirs.glsl  draw_matter.glsl  fall_empty.glsl  includes.glsl  matter.glsl  query_matter.glsl  slide_down_empty.glsl
shaders/: quad_frag.glsl  quad_vert.glsl
src/: ca_pipeline.rs  ca_simulator.rs  camera.rs  gui.rs  main.rs  matter.rs  quad_pipeline.rs  render.rs  timer.rs  utils.rs  vertex.rs
