[package]
name = "cellular_automata"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy_vulkano = { version = "0.4.0", features = ["gui"] }
bytemuck = "1.9.1"
vulkano = "0.29.0"
vulkano-shaders = "0.29.0"
strum_macros = "0.24.0"
strum = "0.24.0"

[dependencies.bevy]
version = "0.7.0"
default-features = false
features = []

[profile.dev]
opt-level = 3

[profile.dev.package."*"]
opt-level = 3

[profile.release]
lto = "thin"
